--- a/Day-6_Assignment/que2.html
+++ b/Day-6_Assignment/que2.html
@@ -1,3 +1,5 @@
+// Bus records management
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -78,6 +80,6 @@
     </table>
 </div>
 
-<script src="bus_record.js"></script>
+<script src="que2.js"></script>
 </body>
 </html>
